# clangsa-ninja-gen

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build-release-linux.sh  build-release-macos.sh
.github/workflows/: build.yml
merge_extdefs/: Cargo.toml
merge_extdefs/src/: main.rs
ninja_syntax/src/: lib.rs  ninja_syntax.rs
ninja_syntax/tests/: tests.rs
sa_ninja_gen/: Cargo.toml
sa_ninja_gen/src/: cli.rs  cmdb.rs  main.rs  ninjagen.rs  types.rs  utils.rs
