[package]
name = "sa_ninja_gen"
version = "0.1.0"
edition = "2021"

authors = ["Tamás Szelei"]
description = "Generates a ninja build to run clang static analyzer"
readme = "README.md"
repository = "https://github.com/sztomi/sa_ninja_gen"
license = "MIT"

[dependencies]
clap = { version = "4.*", features = ["derive"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
sugar_path = "0.0.12"
ninja_syntax = "0.1.*"
which = "4.0.*"
anyhow = "1.*"
xxhash-rust = { version = "0.*", features = ["xxh64", "xxh3"] }
